Final styles for app_downloader: Final stage

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -60,7 +60,7 @@
       <li>
         <a class="nav-link text-white" href="{% url 'app_download:files_browser' %}">
           <i class="fa-solid fa-folders"></i>
-          <span class="nav-item">Files browser</span>
+          <span class="nav-item">Files uploader</span>
         </a>
       </li>
       <li>
