--- a/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
@@ -32,9 +32,8 @@
                         <td>{{ contact.address }}</td>
                         <td>
 
-                            <h5><a class="badge rounded-pill text-bg-info" 
-                                href="{% url 'app_contacts:detail' pk=contact.pk %}"
-                                style="color: white !important;">Details</a>
+                            <h5><a class="badge rounded-pill text-bg-info" style="color: white !important;"
+                                href="{% url 'app_contacts:detail' pk=contact.pk %}">Details</a>
                             </h5>
 
                         </td>
