--- a/personal_assistant/app_download/templates/app_download/index.html
+++ b/personal_assistant/app_download/templates/app_download/index.html
@@ -3,13 +3,15 @@
 
 {% block content %}
 
-    <h2>Choose what you want to see:</h2>
+    <h2>Choose category files, that you want to see:</h2>
 
     <nav>
         <div class="card" style="border-color: white;">
             <div class="card-body">
-            <a href="{% url 'app_download:upload' %}" class="btn btn-primary">Upload File</a>
             <a href="{% url 'app_download:files' %}" class="btn btn-primary">All Files</a>
+            <a href="{% url 'app_download:upload' %}" class="btn btn-success">
+                <i class="fa-solid fa-file-arrow-up" style="margin-right: 8px;"></i>Upload file
+            </a>
             </div>
         </div>
     </nav>
@@ -22,28 +24,28 @@
             </tr>
             <tr>
                 <td><i class="fa-solid fa-file-image" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:images' %}" style="font-size:24px;">Images</a></td>
+                <td><a href="{% url 'app_download:image' %}" style="font-size:22px;">Images</a></td>
             </tr>
             <tr>
                 <td><i class="fa fa-file-text" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:documents' %}" style="font-size:24px;">Documents</a></td>
+                <td><a href="{% url 'app_download:document' %}" style="font-size:22px;">Documents</a></td>
             </tr>
             <tr>
                 <td><i class="fa-solid fa-file-audio" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:musics' %}" style="font-size:24px;">Musics</a></td>
+                <td><a href="{% url 'app_download:music' %}" style="font-size:22px;">Musics</a></td>
             </tr>
 
             <tr>
                 <td><i class="fa-solid fa-file-video" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:videos' %}" style="font-size:24px;">Videos</a></td>
+                <td><a href="{% url 'app_download:video' %}" style="font-size:22px;">Videos</a></td>
             </tr>
             <tr>
                 <td><i class="fa-solid fa-file-binary" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:archives' %}" style="font-size:24px;">Archives</a></td>
+                <td><a href="{% url 'app_download:archive' %}" style="font-size:22px;">Archives</a></td>
             </tr>
             <tr>
-                <td><i class="fa-solid fa-file-lines" style="font-size:36px; color: #8224e3"></i></td>
-                <td><a href="{% url 'app_download:others' %}" style="font-size:24px;">Others</a></td>
+                <td><i class="fa-solid fa-file" style="font-size:36px; color: #8224e3"></i></td>
+                <td><a href="{% url 'app_download:other' %}" style="font-size:22px;">Others</a></td>
             </tr>
         </table>
     </div>
