--- a/personal_assistant/app_download/templates/app_download/document.html
+++ b/personal_assistant/app_download/templates/app_download/document.html
@@ -1,7 +1,18 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-<h2>Your documents</h2>
+<h2 style="padding-left: 1rem;">Your documents</h2>
+
+<nav>
+    <div class="card" style="border-color: white;">
+        <div class="card-body">
+            <a href="{% url 'app_download:files' %}" class="btn btn-primary">
+                <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                All Files
+            </a>
+        </div>
+    </div>
+</nav>
 
 {% if document_list %}
   <div class="bd-example">
@@ -9,7 +20,7 @@
           <thead>
           <tr>
               <th scope="col">Description</th>
-              <th scope="col">Original filename/Virtual path</th>
+              <th scope="col">Original filename</th>
               <th scope="col">Details</th>
               <th scope="col">###</th>
           </tr>
@@ -18,18 +29,19 @@
               {% for f in document_list %}
                   <tr>
                       <th scope="row">
-                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 5px;"></i>{{ f.description }}
+                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 8px; font-size:26px;"></i>
+                        {{ f.description }}
                       </th>
                       <td><a href="{{media}}{{f.path}}">{{ f.original_name }}</a></td>
                       <td>
-                        <a class="badge rounded-pill text-bg-info" 
-                            href="{% url 'app_download:edit_description' f_id=f.id %}"
-                            style="color: white !important;">Edit</a>
+                        <a class="badge rounded-pill text-bg-info" style="color: white !important;"
+                            href="{% url 'app_download:edit_description' f_id=f.id %}">Edit
+                        </a>
                       </td>
                       <td>
-                        <a class="badge rounded-pill text-bg-danger" 
-                            href="{% url 'app_download:delete_file' f_id=f.id %}"
-                            style="color: white !important;">Delete</a>
+                        <a class="badge rounded-pill text-bg-danger" style="color: white !important;"
+                            href="{% url 'app_download:delete_file' f_id=f.id %}">Delete
+                        </a>
                       </td>
                   </tr>
               {% endfor %}
