--- a/personal_assistant/app_download/templates/app_download/files.html
+++ b/personal_assistant/app_download/templates/app_download/files.html
@@ -1,8 +1,19 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-<h1>Your all files</h1>
-<div class="row">
+<h2 style="padding-left: 1rem;">All your files</h2>
+
+<nav>
+    <div class="card" style="border-color: white;">
+        <div class="card-body">
+            <a href="{% url 'app_download:files_browser' %}" class="btn btn-primary">
+                <i class="fa fa-angle-double-left" aria-hidden="true"></i> Back to Categories</a>
+            <a href="{% url 'app_download:upload' %}" class="btn btn-success">
+                <i class="fa-solid fa-file-arrow-up" style="margin-right: 8px;"></i>Upload file
+            </a>
+        </div>
+    </div>
+</nav>
 
   {% if files %}
   <div class="bd-example">
@@ -11,6 +22,7 @@
           <tr>
               <th scope="col">Description</th>
               <th scope="col">Original filename</th>
+              <th scope="col">Category</th>
               <th scope="col">Details</th>
               <th scope="col">###</th>
           </tr>
@@ -19,18 +31,20 @@
               {% for f in files %}
                   <tr>
                       <th scope="row">
-                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 5px;"></i>{{ f.description }}
+                        <i class="fa-solid fa-file" style="color: #8224e3; margin-right: 8px; font-size:26px;"></i>
+                        {{ f.description }}
                       </th>
-                      <td>{{ f.original_name }}</td>
+                      <td><a href="{{media}}{{f.path}}">{{ f.original_name }}</a></td>
+                      <td><p>{{ f.category }}</p></td>
                       <td>
-                        <a class="badge rounded-pill text-bg-info" 
-                            href="{% url 'app_download:edit_description' f_id=f.id %}"
-                            style="color: white !important;">Edit</a>
+                        <a class="badge rounded-pill text-bg-info" style="color: white !important;"
+                            href="{% url 'app_download:edit_description' f_id=f.id %}">Edit
+                        </a>
                       </td>
                       <td>
-                        <a class="badge rounded-pill text-bg-danger" 
-                            href="{% url 'app_download:delete_file' f_id=f.id %}"
-                            style="color: white !important;">Delete</a>
+                        <a class="badge rounded-pill text-bg-danger" style="color: white !important;"
+                            href="{% url 'app_download:delete_file' f_id=f.id %}">Delete
+                        </a>
                       </td>
                   </tr>
               {% endfor %}
@@ -40,5 +54,4 @@
   <br>
 {% endif %}
 
-</div>
 {% endblock %}
