Final styles + texting: app_contacts

--- a/personal_assistant/app_contacts/templates/app_contacts/dashboard.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/dashboard.html
@@ -15,11 +15,11 @@
     </div>
     <div class="card-body" style="display: inline-block">
         <!---<div class="d-grid gap-2 mx-auto">--->
+        
+        <a href="{% url 'app_contacts:contact' %}" class="btn btn-success">Create new Contact</a>
 
-        <a href="{% url 'app_contacts:all_contacts' %}" class="btn btn-primary">My Contacts</a>
-        
-        <a href="{% url 'app_contacts:contact' %}" class="btn btn-primary">Create New Contact</a>
-        
+        <a href="{% url 'app_contacts:all_contacts' %}" class="btn btn-primary">All Contacts</a>
+
         <a href="{% url 'app_contacts:upcoming_birthdays' %}" class="btn btn-primary">Upcoming Birthdays</a>
 
         <a href="{% url 'app_contacts:search_contacts' %}" class="btn btn-primary">Search Contact</a>
