--- a/personal_assistant/app_contacts/templates/app_contacts/upcoming_birthdays.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/upcoming_birthdays.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<h2 style="margin-left: 1rem">Upcoming birthdays</h2>
 
 <nav class="mb-3 border-b-4">
   <div class="card" style="border-color: white;">
@@ -30,7 +31,6 @@
 <br>
 
 {% if contacts %}
-  <h2>Найближчі дні народження</h2>
   <table class="table table-bordered">
     <thead>
       <tr>
