--- a/personal_assistant/users/templates/users/signin.html
+++ b/personal_assistant/users/templates/users/signin.html
@@ -19,6 +19,7 @@
 </div>
 {% endif %}
 
+<div class="bd-example">
 <form method="post">
     {% csrf_token %}
     <div class="form-row">
@@ -40,4 +41,5 @@
         <a href="{% url 'users:password_reset' %}">Forgot Password?</a>
     </div>
 </form>
+</div>
 {% endblock %}
