Changed font-family in styles.css (to Noto Sans)

--- a/personal_assistant/app_assistant/static/app_assistant/styles.css
+++ b/personal_assistant/app_assistant/static/app_assistant/styles.css
@@ -1,7 +1,8 @@
 
 body {
     /*font-family: 'Montserrat';*/
-    font-family: 'DM Sans';
+    /*font-family: 'DM Sans';*/
+    font-family: 'Noto Sans';
 }
 
 /* quotes */
