Applied Roboto-font.

--- a/personal_assistant/app_assistant/static/app_assistant/styles.css
+++ b/personal_assistant/app_assistant/static/app_assistant/styles.css
@@ -1,8 +1,8 @@
 
 body {
-    /*font-family: 'Montserrat';*/
-    /*font-family: 'DM Sans';*/
-    font-family: 'Noto Sans';
+    /*font-family: 'Inter';*/
+    /*font-family: 'Noto Sans';*/
+    font-family: 'Roboto';
 }
 
 /* quotes */
